namespace Chess.Enums;
public enum GameStatus
{
    Running,
    Finished
}